--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -22,3 +22,8 @@ abbr{
 .date select.date.form-control {
   width: auto;
 }
+.btn-danger {
+  color: #fff !important;
+  background-color: #4cc0c1 !important;
+  border-color: #4cc0c1 !important;
+}
