--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -78,28 +78,12 @@
           .list-group
             = link_to raw("<i class='fa fa-shopping-cart fa-2x'></i>Start a New Sale") , new_sale_path , class: 'list-group-item'
       .row
+        = render 'dashboard/partials/chart'
+        = render 'dashboard/partials/recent_sale' , sales: @recent_sales
         = render 'dashboard/partials/low_stock' , items: @popular_items , heading: "Popular Items"
         = render 'dashboard/partials/low_stock' , items: @low_stock_items , heading: "Low Stock Items"
         = render 'dashboard/partials/latest_expense' , expenses: @recent_expenses
-        .col-md-12
-          %section.panel.panel-default
-            %header.panel-heading.font-bold Statistics
-            .panel-body
-              #flot-1ine{:style => "height:210px"}
-            %footer.panel-footer.bg-white.no-padder
-              .row.text-center.no-gutter
-                .col-xs-3.b-r.b-light
-                  %span.h4.font-bold.m-t.block 5,860
-                  %small.text-muted.m-b.block Orders
-                .col-xs-3.b-r.b-light
-                  %span.h4.font-bold.m-t.block= current_location.sales.count
-                  %small.text-muted.m-b.block Sellings
-                .col-xs-3.b-r.b-light
-                  %span.h4.font-bold.m-t.block= current_location.items.count
-                  %small.text-muted.m-b.block Items
-                .col-xs-3
-                  %span.h4.font-bold.m-t.block= current_location.customers.count
-                  %small.text-muted.m-b.block Customers
+
     / <div class="col-md-4">
     / <section class="panel panel-default">
     / <header class="panel-heading font-bold">Data graph</header>
