--- a/app/views/template/ajax_reload.js.haml
+++ b/app/views/template/ajax_reload.js.haml
@@ -1,29 +1,15 @@
-<%if flash[:alert].present? || flash[:toastr].present? || flash[:error].present? || flash[:errors].present? || flash[:success].present? || flash[:notice].present? || flash[:info].present?%>
-
-<%if flash[:alert].present?%>
-flash_alert("<%= flash[:alert] %>");
-<%end%>
-
-<%if flash[:error].present?%>
-flash_error("<%= flash[:error] %>");
-<%end%>
-
-<%if flash[:errors].present?%>
-<%flash[:errors].each do |e|%>
-flash_error("<%= e %>");
-<%end%>
-<%end%>
-
-<%if flash[:success].present?%>
-flash_success("<%= flash[:success] %>");
-window.location.reload();
-<%end%>
-
-<%if flash[:notice].present?%>
-flash_notice("<%= flash[:notice] %>");
-<%end%>
-
-<%if flash[:info].present?%>
-flash_info("<%= flash[:info] %>");
-<%end%>
-<%end%>
+- if flash[:alert].present? || flash[:toastr].present? || flash[:error].present? || flash[:errors].present? || flash[:success].present? || flash[:notice].present? || flash[:info].present?
+  - if flash[:alert].present?
+    flash_alert("#{flash[:alert]}");
+  - if flash[:error].present?
+    flash_error("#{flash[:error]}");
+  - if flash[:errors].present?
+    - flash[:errors].each do |e|
+      flash_error("#{e}");
+  - if flash[:success].present?
+    flash_success("#{flash[:success]}");
+    window.location.reload();
+  - if flash[:notice].present?
+    flash_notice("#{flash[:notice]}");
+  - if flash[:info].present?
+    flash_info("#{flash[:info]}");
