--- a/app/views/template/_footer.html.haml
+++ b/app/views/template/_footer.html.haml
@@ -1,45 +1,39 @@
-<footer id="footer">
-  <div class="bg-info text-center">
-    <div class="container wrapper">
-      <!--<div class="m-t-xl m-b">-->
-        <!--For your faster and easier web development.-->
-        <!--<a href="#" target="_blank" class="btn btn-lg btn-dark b-white bg-empty m-sm">Download it</a>-->
-        <!--<a href="#" target="_blank" class="btn btn-lg btn-warning b-white bg-empty m-sm">Live Preview</a>-->
-      <!--</div>-->
-    </div>
-    <i class="fa fa-caret-down fa-4x text-info m-b-n-lg block"></i>
-  </div>
-  <div class="bg-dark dker wrapper">
-    <div class="container text-center m-t-lg">
-      <div class="row m-t-xl m-b-xl">
-        <div class="col-sm-4" data-ride="animated" data-animation="fadeInLeft" data-delay="300">
-          <i class="fa fa-map-marker fa-3x icon-muted"></i>
-          <h5 class="text-uc m-b m-t-lg">Find Us</h5>
-          <p class="text-sm">23 soe Midlokls <br>
-            120002 Loki — UNITED KINGDOM
-          </p>
-        </div>
-        <div class="col-sm-4" data-ride="animated" data-animation="fadeInUp" data-delay="600">
-          <i class="fa fa-envelope-o fa-3x icon-muted"></i>
-          <h5 class="text-uc m-b m-t-lg">Mail Us</h5>
-          <p class="text-sm"><a href="mailto:<%= current_site.email %>"><%= current_site.email %></a></p>
-        </div>
-        <div class="col-sm-4" data-ride="animated" data-animation="fadeInRight" data-delay="900">
-          <i class="fa fa-globe fa-3x icon-ifo"></i>
-          <h5 class="text-uc m-b m-t-lg">Contact Us</h5>
-          <!--<p class="text-sm">Send your resume to <br><a href="mailto:hey@example.com">recruit@example.com</a></p>-->
-        </div>
-      </div>
-      <div class="m-t-xl m-b-xl">
-        <p>
-          <a href="<%= current_site.facebook_url %>" class="btn btn-icon btn-rounded btn-facebook bg-empty m-sm"><i class="fa fa-facebook"></i></a>
-          <a href="<%= current_site.twitter_url %>" class="btn btn-icon btn-rounded btn-twitter bg-empty m-sm"><i class="fa fa-twitter"></i></a>
-          <a href="<%= current_site.google_url %>" class="btn btn-icon btn-rounded btn-gplus bg-empty m-sm"><i class="fa fa-google-plus"></i></a>
-        </p>
-        <p>
-          <a href="#content" data-jump="true" class="btn btn-icon btn-rounded btn-dark b-dark bg-empty m-sm text-muted"><i class="fa fa-angle-up"></i></a>
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
+%footer#footer
+  .bg-info.text-center
+    .container.wrapper
+    / <div class="m-t-xl m-b">
+    / For your faster and easier web development.
+    / <a href="#" target="_blank" class="btn btn-lg btn-dark b-white bg-empty m-sm">Download it</a>
+    / <a href="#" target="_blank" class="btn btn-lg btn-warning b-white bg-empty m-sm">Live Preview</a>
+    / </div>
+    %i.fa.fa-caret-down.fa-4x.text-info.m-b-n-lg.block
+  .bg-dark.dker.wrapper
+    .container.text-center.m-t-lg
+      .row.m-t-xl.m-b-xl
+        .col-sm-4{"data-animation" => "fadeInLeft", "data-delay" => "300", "data-ride" => "animated"}
+          %i.fa.fa-map-marker.fa-3x.icon-muted
+          %h5.text-uc.m-b.m-t-lg Find Us
+          -#%p.text-sm
+          -#  = current_site.address
+          -#  %br/
+          -#  = current_site.zip_code + "  " + current_site.city + " — "+ current_site.country
+        .col-sm-4{"data-animation" => "fadeInUp", "data-delay" => "600", "data-ride" => "animated"}
+          %i.fa.fa-envelope-o.fa-3x.icon-muted
+          %h5.text-uc.m-b.m-t-lg Mail Us
+          %p.text-sm
+            %a{:href => "mailto:#{current_site.email}"}= current_site.email
+        .col-sm-4{"data-animation" => "fadeInRight", "data-delay" => "900", "data-ride" => "animated"}
+          %i.fa.fa-globe.fa-3x.icon-ifo
+          %h5.text-uc.m-b.m-t-lg Contact Us
+      / <p class="text-sm">Send your resume to <br><a href="mailto:hey@example.com">recruit@example.com</a></p>
+      .m-t-xl.m-b-xl
+        %p
+          = link_to "https://#{current_site.facebook_url}" , class: 'btn btn-icon btn-rounded btn-facebook bg-empty m-sm' do
+            %i.fa.fa-facebook
+          %a.btn.btn-icon.btn-rounded.btn-twitter.bg-empty.m-sm{:href => "https://#{current_site.twitter_url}"}
+            %i.fa.fa-twitter
+          %a.btn.btn-icon.btn-rounded.btn-gplus.bg-empty.m-sm{:href => "https://#{current_site.google_url}"}
+            %i.fa.fa-google-plus
+        %p
+          =link_to "#content" , data: { 'jump': 'true'} , class: 'btn btn-icon btn-rounded btn-dark b-dark bg-empty m-sm text-muted' do
+            %i.fa.fa-angle-up
