--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -25,7 +25,7 @@
                   Multiple location Management
         / <div class="h4 m-t-sm" style="color: #d1efef!important;"></div>
         %p.text-center.m-b-xl
-          %a.btn.btn-lg.btn-warning.b-white.bg-empty.m-sm{:href => new_company_path, :target => "_blank"} Get Started
+          = link_to "Get Started" , new_company_path , class: "btn btn-lg btn-warning b-white bg-empty m-sm"
       .padder
         .hbox
           %aside.col-md-3.v-bottom.text-right
