--- a/app/views/items/partials/_index.html.haml
+++ b/app/views/items/partials/_index.html.haml
@@ -31,9 +31,9 @@
               Create
           / <a href="#new-item-category" data-toggle="new-item-category" class="btn btn-sm btn-success"><i class="fa fa-plus"></i> Create</a>
           .col-sm-4.m-b-xs
-            = form_for item_categories_path do |f|
+            = search_form_for @search do |f|
               .input-group
-                = f.text_field :name , class: "input-sm form-control"  , placeholder: "Search"
+                = f.text_field :sku_or_name_cont , class: "input-sm form-control"  , placeholder: "Search"
                 %span.input-group-btn
                   = f.button "Go!" , class: "btn btn-sm btn-default"
       %section.scrollable.wrapper.w-f
@@ -60,19 +60,24 @@
                   %th
                     %span.pull-right Actions
               %tbody
-                - @items.each do |item|
-                  %tr{:class => "#{item.stock_amount > 0 ? '' : 'danger'}"}
-                    %td= image_tag item.photo, style: 'widh: 50px ; width: 50px '
-                    %td= item.sku
-                    %td= item.name
-                    %td= item.item_category.blank? ? '-' : item.item_category.name
-                    %td= item.location.blank? ? '-' : item.location.name
-                    %td= item.stock_amount
-                    %td= item.amount_sold
-                    %td= number_to_currency(item.price , unit: current_company.currency)
-                    %td.text-right
-                      = link_to raw("<i class= 'fa fa-pencil'></i>"),edit_item_path(item), class: "btn btn-dark"
-                      = link_to raw("<i class= 'fa fa-times'></i>"),item, class: "btn btn-dark",:method => :delete, data: {:confirm => "Are you sure you want to delete this item?"}
+                - if @items.empty?
+                  %tr
+                    %td
+                    %td No Record Found
+                - else
+                  - @items.each do |item|
+                    %tr{:class => "#{item.stock_amount > 0 ? '' : 'danger'}"}
+                      %td= image_tag item.photo, style: 'widh: 50px ; width: 50px '
+                      %td= item.sku
+                      %td= item.name
+                      %td= item.item_category.blank? ? '-' : item.item_category.name
+                      %td= item.location.blank? ? '-' : item.location.name
+                      %td= item.stock_amount
+                      %td= item.amount_sold
+                      %td= number_to_currency(item.price , unit: current_company.currency)
+                      %td.text-right
+                        = link_to raw("<i class= 'fa fa-pencil'></i>"),edit_item_path(item), class: "btn btn-dark"
+                        = link_to raw("<i class= 'fa fa-times'></i>"),item, class: "btn btn-dark",:method => :delete, data: {:confirm => "Are you sure you want to delete this item?"}
       / <tr>
       / <td><input type="checkbox" name="post[]" value="2"></td>
       / &lt;!&ndash;<td><a href="#modal" data-toggle="modal"><i class="fa fa-search-plus"></i></a></td>&ndash;&gt;
