--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,6 +1,7 @@
 /*
 *= require bootstrap
 *= require daterangepicker-bs3
+*= require waves/waves
 */
 .m-r-7
 {
@@ -26,4 +27,26 @@ abbr{
   color: #fff !important;
   background-color: #4cc0c1 !important;
   border-color: #4cc0c1 !important;
+}
+.image-preview-input {
+  position: relative;
+  overflow: hidden;
+  margin: 0px;
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+}
+.image-preview-input input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.image-preview-input-title {
+  margin-left:2px;
 }
