text changes in payment modal

--- a/app/views/sales/shared/_payment.html.erb
+++ b/app/views/sales/shared/_payment.html.erb
@@ -42,7 +42,7 @@
       </div>
       </br>
       <div class="form-group">
-        <label class="col-sm-offset-2 col-md-offset-1 control-label"><b>Sent Receipt/Invoice to customer email</b></label>
+        <label class="col-sm-offset-2 col-md-offset-1 control-label"><b>Send Receipt/Invoice to customer email</b></label>
         <div class="col-sm-offset-2 col-sm-12">
               <div class="radio-inline">
 
